Baking to vertex colors not working with subdivision surface modifier #86278

Closed
opened 2021-03-04 16:58:17 +01:00 by Simon Thommes · 7 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-03 07:53, hash: a915e47ca1
Looks like this worked prior to 9febda912b

Short description of error
When the object that is baked to vertex colors has a subdiv modifier, the indices get messed up and the wrong loops/corners get the wrong colors.

bake_vertex_colors_subdiv-2021-03-04_16.46.48.mp4

Something for @brecht ?
This is an issue in the 2.92.0 release as well, but I could not find another report, which surprises me... If this is a known limitation, then maybe subdivision should be prevented in this case with a message to the user.

Exact steps for others to reproduce the error
File attached:
bake_vertex_colors.blend

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-03 07:53, hash: `a915e47ca1` Looks like this worked prior to 9febda912b **Short description of error** When the object that is baked to vertex colors has a subdiv modifier, the indices get messed up and the wrong loops/corners get the wrong colors. [bake_vertex_colors_subdiv-2021-03-04_16.46.48.mp4](https://archive.blender.org/developer/F9866280/bake_vertex_colors_subdiv-2021-03-04_16.46.48.mp4) Something for @brecht ? This is an issue in the 2.92.0 release as well, but I could not find another report, which surprises me... If this is a known limitation, then maybe subdivision should be prevented in this case with a message to the user. **Exact steps for others to reproduce the error** File attached: [bake_vertex_colors.blend](https://archive.blender.org/developer/F9866281/bake_vertex_colors.blend)
Author
Member

Added subscribers: @brecht, @SimonThommes

Added subscribers: @brecht, @SimonThommes
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, this was not an issue prior to 9febda912b

Can confirm, this was not an issue prior to 9febda912b
Member

Asserts here

BLI_assert failed: source/blender/editors/object/object_bake_api.c:1052, bake_targets_output_vertex_colors(), at 'me->totloop == me_split->totloop'

(since this is now initialized with the evaluated mesh)

Asserts here ``` BLI_assert failed: source/blender/editors/object/object_bake_api.c:1052, bake_targets_output_vertex_colors(), at 'me->totloop == me_split->totloop' ``` (since this is now initialized with the evaluated mesh)

This issue was referenced by 85be72c1cc

This issue was referenced by 85be72c1cc7317796dcce3ddc6ec2dedd627ff81

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-05-17 19:43:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86278
No description provided.