Fix T86278: vertex color baking not working with modifiers

As in the old Blender Internal baking code, this still relies on there being a
good mapping to the original vertices.