source/blender/io/alembic/exporter/abc_writer_mball.cc
@@ -69,7 +69,7 @@ Mesh *ABCMetaballWriter::get_export_mesh(Object *object_eval, bool &r_needsfree)
     return mesh_eval;
   }
   r_needsfree = true;
-  return BKE_mesh_new_from_object(args_.depsgraph, object_eval, false);
+  return BKE_mesh_new_from_object(args_.depsgraph, object_eval, false, false);
 }
 
 void ABCMetaballWriter::free_export_mesh(Mesh *mesh)
